--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
